--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [main, develop]
   schedule:
-    - cron: "0 2 * * 0" # Dependency audit every Sunday at 2 AM UTC
+    - cron: "0 2 * * 0" # Weekly security audit
   workflow_dispatch:
 
 permissions:
@@ -18,11 +18,11 @@ permissions:
   security-events: write
 
 env:
-  DATABASE_URL: "mongodb://localhost:27017/toolbox"
+  # Use an in-memory SQLite DB for testing if needed
+  DATABASE_URL: "sqlite+aiosqlite:///:memory:"
 
 jobs:
   version:
-    # ... (omitted for brevity in replacement, but I must match the actual content)
     name: Get Version
     runs-on: ubuntu-latest
     outputs:
@@ -32,94 +32,46 @@ jobs:
       - name: Get version from CHANGELOG
         id: get_version
         run: |
-          VERSION=$(grep -m 1 "## \[" CHANGELOG.md | sed -E 's/.*\[([^]]+)\].*/\1/')
+          if [ -f "CHANGELOG.md" ]; then
+            VERSION=$(grep -m 1 "## \[" CHANGELOG.md | sed -E 's/.*\[([^]]+)\].*/\1/')
+          else
+            VERSION="0.0.0"
+          fi
           echo "version=$VERSION" >> $GITHUB_OUTPUT
           echo "Detected version: $VERSION"
 
-  lint-and-format:
-    name: Lint and Format
+  lint-and-security:
+    name: Lint & Security
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Python 3.11
+        uses: actions/setup-python@v5
         with:
-          node-version: "20"
-          cache: "npm"
+          python-version: '3.11'
+          cache: 'pip'
 
       - name: Install dependencies
-        run: npm ci
-
-      - name: Generate Prisma Client
-        run: npm run prisma:generate
-
-      - name: Run ESLint
-        run: npm run lint:eslint
-
-      - name: Check i18n translations
-        run: npm run i18n:check
-
-      - name: Check formatting
-        run: npx prettier --check .
-
-  type-check:
-    name: Type Check
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Generate Prisma Client
-        run: npm run prisma:generate
-
-      - name: Type check
-        run: npx tsc --noEmit
-
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    needs: [lint-and-format, type-check]
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Generate Prisma Client
-        run: npm run prisma:generate
-
-      - name: Build project
-        run: npm run build
-
-      - name: Check build artifacts
         run: |
-          if [ ! -d ".next" ]; then
-            echo "Build failed: .next directory not found"
-            exit 1
-          fi
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-  test-docker-build:
-    name: Test Docker Build
+      - name: Lint with Ruff
+        run: |
+          # Check for linting errors
+          ruff check .
+          # Check formatting
+          ruff format --check .
+
+      - name: Security Check (Bandit)
+        run: |
+          bandit -r app -lll
+
+  build-test:
+    name: Test Build
     runs-on: ubuntu-latest
-    needs: build
+    needs: [lint-and-security]
     if: github.event_name == 'pull_request'
 
     steps:
@@ -133,13 +85,14 @@ jobs:
         with:
           context: .
           push: false
+          tags: toolbox:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
   deploy-docker:
-    name: Build and Push Docker Image
+    name: Build & Push Image
     runs-on: ubuntu-latest
-    needs: [build, version]
+    needs: [lint-and-security, version]
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || startsWith(github.ref, 'refs/tags/'))
 
     steps:
@@ -198,106 +151,31 @@ jobs:
           draft: false
           prerelease: false
 
-  # ===== CODE REVIEW JOBS =====
-  code-quality:
-    name: Code Quality Check
+  # ===== ADDITIONAL CHECKS =====
+  code-quality-extra:
+    name: Code Quality Extra
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Check for console logs
+      
+      - name: Check for print statements
         run: |
-          if grep -r "console\." src --include="*.ts" --include="*.tsx" | grep -v "console.error\|console.warn"; then
-            echo "::warning::Found console statements (except warn/error). Consider removing them."
+          # Exclude common dirs and check for print()
+          if grep -r "print(" app --include="*.py"; then
+            echo "::warning::Found 'print()' statements. Consider using logging."
           fi
 
       - name: Check for TODO comments
         run: |
-          TODO_COUNT=$(grep -r "TODO\|FIXME" src --include="*.ts" --include="*.tsx" | wc -l)
+          TODO_COUNT=$(grep -r "TODO\|FIXME" app --include="*.py" | wc -l)
           if [ $TODO_COUNT -gt 0 ]; then
             echo "::notice::Found $TODO_COUNT TODO/FIXME comments"
           fi
 
-  dependency-check:
-    name: Dependency Check
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Check for vulnerable dependencies
-        run: npm audit --audit-level=moderate
-
-  pr-size-check:
-    name: PR Size Check
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Get changed files count
-        id: files
-        run: |
-          FILES=$(git diff --name-only origin/main...HEAD | wc -l)
-          echo "changed_files=$FILES" >> $GITHUB_OUTPUT
-          echo "Changed files: $FILES"
-
-      - name: Check PR size
-        run: |
-          FILES=${{ steps.files.outputs.changed_files }}
-          if [ $FILES -gt 50 ]; then
-            echo "::warning::Large PR detected: $FILES files changed. Consider breaking into smaller PRs."
-          fi
-
-  # ===== SECURITY & MAINTENANCE JOBS =====
-  dependency-audit:
-    name: Dependency Audit
-    runs-on: ubuntu-latest
-    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Run npm audit
-        run: npm audit --json > audit-report.json
-
-      - name: Upload audit report
-        uses: actions/upload-artifact@v4
-        with:
-          name: npm-audit-report
-          path: audit-report.json
-
   container-scan:
-    name: Security Scan
+    name: Trivy Security Scan
     runs-on: ubuntu-latest
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || github.event_name == 'push'
 
@@ -313,31 +191,8 @@ jobs:
           output: "trivy-results.sarif"
           severity: "HIGH,CRITICAL"
 
-      - name: Upload Trivy results to GitHub Security tab
+      - name: Upload Trivy results
         uses: github/codeql-action/upload-sarif@v3
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
-
-  check-updates:
-    name: Check for Updates
-    runs-on: ubuntu-latest
-    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "npm"
-
-      - name: Check outdated packages
-        run: |
-          npm outdated
-
-      - name: Check if updates available
-        run: |
-          echo "## Dependency Updates" >> $GITHUB_STEP_SUMMARY
-          echo "Check logs for outdated packages" >> $GITHUB_STEP_SUMMARY
