feat: migrate database from SQLAlchemy to MongoDB (Beanie/Motor)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=sqlite+aiosqlite:///./toolbox.db
+DATABASE_URL=mongodb://localhost:27017/toolbox
 ADMIN_PASSWORD=admin123
 SECRET_KEY=generate-a-very-secret-key-for-sessions
