fix: resolve bcrypt compatibility issues by using bcrypt directly and pinning version

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ nicegui
 motor
 beanie
 python-dotenv
-passlib[bcrypt]
+bcrypt==4.0.1
+passlib
 python-jose[cryptography]
 pydantic
 pydantic-settings
