--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -18,8 +18,8 @@ permissions:
   security-events: write
 
 env:
-  # Use an in-memory SQLite DB for testing if needed
-  DATABASE_URL: "sqlite+aiosqlite:///:memory:"
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   version:
@@ -64,23 +64,56 @@ jobs:
 
       - name: Security Check (Bandit)
         run: |
-          # 1. 检查中高风险，无视 nosec，发现即失败
           bandit -r app --ignore-nosec -ll || exit 1
-
-          # 2. 统计所有问题，包括低风险，无视 nosec
           TOTAL_ISSUES=$(bandit -r app --ignore-nosec -l -f custom --msg-template "{severity}" 2>/dev/null | grep -c -E "LOW|MEDIUM|HIGH" || echo 0)
           echo "Total security issues found: $TOTAL_ISSUES"
-
           if [ "$TOTAL_ISSUES" -gt 5 ]; then
             echo "::error::Security check failed: Found $TOTAL_ISSUES issues, which exceeds the limit of 5."
             exit 1
           fi
 
-  deploy-docker:
-    name: Build & Push Image
+  build-base:
+    name: Build & Push Base Image
     runs-on: ubuntu-latest
-    needs: [lint-and-security, version]
-    if: github.event_name == 'push' || github.event_name == 'pull_request'
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
+    outputs:
+      base_updated: ${{ steps.filter.outputs.base }}
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Check for Dockerfile.base changes
+        id: filter
+        uses: dorny/paths-filter@v3
+        with:
+          filters: |
+            base:
+              - 'Dockerfile.base'
+              - '.github/workflows/docker-publish.yml'
+
+      - name: Log in to GHCR
+        if: steps.filter.outputs.base == 'true' || github.event_name == 'workflow_dispatch'
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Base image
+        if: steps.filter.outputs.base == 'true' || github.event_name == 'workflow_dispatch'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.base
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:base
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  deploy-docker:
+    name: Build & Push App Image
+    runs-on: ubuntu-latest
+    needs: [lint-and-security, version, build-base]
+    if: always() && (needs.lint-and-security.result == 'success') && (github.event_name == 'push' || github.event_name == 'pull_request')
 
     steps:
       - uses: actions/checkout@v4
@@ -91,7 +124,7 @@ jobs:
       - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
@@ -99,7 +132,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=branch
             type=ref,event=tag
@@ -108,13 +141,16 @@ jobs:
             type=raw,value=${{ needs.version.outputs.version }}
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push Docker image
+      - name: Build and push App image
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          # 确保拉取最新的 base 镜像
+          pull: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -138,32 +174,10 @@ jobs:
           draft: false
           prerelease: false
 
-  # ===== ADDITIONAL CHECKS =====
-  code-quality-extra:
-    name: Code Quality Extra
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Check for print statements
-        run: |
-          # Exclude common dirs and check for print()
-          if grep -r "print(" app --include="*.py"; then
-            echo "::warning::Found 'print()' statements. Consider using logging."
-          fi
-
-      - name: Check for TODO comments
-        run: |
-          TODO_COUNT=$(grep -r "TODO\|FIXME" app --include="*.py" | wc -l)
-          if [ $TODO_COUNT -gt 0 ]; then
-            echo "::notice::Found $TODO_COUNT TODO/FIXME comments"
-          fi
-
   container-scan:
     name: Trivy Security Scan
     runs-on: ubuntu-latest
+    needs: deploy-docker
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' || github.event_name == 'push'
 
     steps:
