--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=mongodb://localhost:27017/toolbox
+DATABASE_URL=mysql+asyncmy://user:password@localhost:3306/toolbox
 ADMIN_PASSWORD=admin123
 SECRET_KEY=generate-a-very-secret-key-for-sessions
