--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 nicegui
-motor
-beanie
+sqlalchemy
+asyncmy
+cryptography # asyncmy 可能会用到
 python-dotenv
 bcrypt==4.0.1
 passlib
@@ -10,5 +11,3 @@ pydantic-settings
 ruff
 bandit
 pre-commit
-dnspython
-certifi
