--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,14 +11,14 @@ repos:
     hooks:
       - id: check-apt-in-app-dockerfile
         name: Check for apt usage in App Dockerfile
-        entry: grep -Ei "apt-get|apt install" Dockerfile
+        entry: bash -c '! grep -Ei "apt-get|apt install" Dockerfile'
         language: system
         files: ^Dockerfile$
         pass_filenames: false
         message: "Error: Do not use 'apt' in the main Dockerfile. Please update Dockerfile.base instead to include new system dependencies."
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.9
+    rev: v0.1.11
     hooks:
       - id: ruff
         args: [--fix]
