--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -197,3 +197,18 @@ jobs:
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
+
+  cleanup:
+    name: Cleanup Untagged Images
+    runs-on: ubuntu-latest
+    needs: deploy-docker
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    steps:
+      - name: Delete untagged image versions
+        uses: actions/delete-package-versions@v5
+        with:
+          package-name: "toolbox-web"
+          package-type: "container"
+          min-versions-to-keep: 3
+          delete-only-untagged-versions: "true"
+        continue-on-error: true
