--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -111,7 +111,7 @@ jobs:
   deploy-docker:
     name: Build & Push App Image
     runs-on: ubuntu-latest
-    needs: [lint-and-security, version, build-base]
+    needs: [lint-and-security, version, build-base, cleanup]
     if: always() && (needs.lint-and-security.result == 'success') && (github.event_name == 'push' || github.event_name == 'pull_request')
 
     steps:
@@ -201,7 +201,7 @@ jobs:
   cleanup:
     name: Cleanup Untagged Images
     runs-on: ubuntu-latest
-    needs: deploy-docker
+    needs: lint-and-security
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Delete untagged image versions
