--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -75,8 +75,7 @@ jobs:
   build-base:
     name: Build & Push Base Image
     runs-on: ubuntu-latest
-    needs: cleanup
-    if: always() && (github.event_name == 'push' || github.event_name == 'workflow_dispatch')
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     outputs:
       base_updated: ${{ steps.filter.outputs.base }}
     steps:
@@ -112,7 +111,7 @@ jobs:
   deploy-docker:
     name: Build & Push App Image
     runs-on: ubuntu-latest
-    needs: [lint-and-security, version, build-base, cleanup]
+    needs: [lint-and-security, version, build-base]
     if: always() && (needs.lint-and-security.result == 'success') && (github.event_name == 'push' || github.event_name == 'pull_request')
 
     steps:
@@ -198,17 +197,3 @@ jobs:
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
-
-  cleanup:
-    name: Cleanup Untagged Images
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    steps:
-      - name: Delete untagged image versions
-        uses: actions/delete-package-versions@v5
-        with:
-          package-name: "toolbox-web"
-          package-type: "container"
-          min-versions-to-keep: 3
-          delete-only-untagged-versions: "true"
-        continue-on-error: true
