--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -78,10 +78,11 @@ jobs:
     if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
     outputs:
       base_updated: ${{ steps.filter.outputs.base }}
+      app_updated: ${{ steps.filter.outputs.app }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check for Dockerfile.base or requirements.txt changes
+      - name: Check for changes
         id: filter
         uses: dorny/paths-filter@v3
         with:
@@ -89,6 +90,9 @@ jobs:
             base:
               - 'Dockerfile.base'
               - 'requirements.txt'
+            app:
+              - 'Dockerfile'
+              - 'scripts/entrypoint.sh'
 
       - name: Log in to GHCR
         if: steps.filter.outputs.base == 'true' || github.event_name == 'workflow_dispatch'
@@ -113,7 +117,10 @@ jobs:
     name: Build & Push App Image
     runs-on: ubuntu-latest
     needs: [lint-and-security, version, build-base]
-    if: always() && (needs.lint-and-security.result == 'success') && (github.event_name == 'push' || github.event_name == 'pull_request')
+    if: |
+      always() &&
+      (needs.lint-and-security.result == 'success') &&
+      (needs.build-base.outputs.app_updated == 'true' || github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/'))
 
     steps:
       - uses: actions/checkout@v4
