--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -120,7 +120,12 @@ jobs:
     if: |
       always() &&
       (needs.lint-and-security.result == 'success') &&
-      (needs.build-base.outputs.app_updated == 'true' || github.event_name == 'workflow_dispatch' || startsWith(github.ref, 'refs/tags/'))
+      (
+        needs.build-base.outputs.base_updated == 'true' ||
+        needs.build-base.outputs.app_updated == 'true' ||
+        github.event_name == 'workflow_dispatch' ||
+        startsWith(github.ref, 'refs/tags/')
+      )
 
     steps:
       - uses: actions/checkout@v4
@@ -157,7 +162,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          # 确保拉取最新的 base 镜像
+          # 核心：基础镜像更新后，强制拉取并基于最新 base 构建
           pull: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
