--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -4,14 +4,16 @@ FROM python:3.11-slim
 ENV DEBIAN_FRONTEND=noninteractive
 
 # 安装系统包：构建工具、LibreOffice、中文字体和 git
-RUN apt-get update && apt-get install -y \
+# 所有命令合并为一行 (逻辑行)，使用反斜杠换行保持可读性
+RUN apt-get update && \
+    apt-get install -y \
     build-essential \
     libpq-dev \
     libreoffice \
     fonts-wqy-zenhei \
     fonts-wqy-microhei \
-    git \
-    && rm -rf /var/lib/apt/lists/*
+    git && \
+    rm -rf /var/lib/apt/lists/*
 
 # 基础镜像安装 pip 依赖
 WORKDIR /app
