chore: pin python dependency versions in requirements.txt for stability

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-nicegui
-sqlalchemy
-asyncmy
-cryptography # asyncmy 可能会用到
-python-dotenv
+nicegui==2.12.1
+sqlalchemy==2.0.45
+asyncmy==0.2.9
+cryptography==3.4.8
+python-dotenv==1.2.1
 bcrypt==4.0.1
-passlib
-python-jose[cryptography]
-pydantic
-pydantic-settings
-psutil
-ruff
-bandit
-pre-commit
-PyPDF2
-reportlab
-httpx
+passlib==1.7.4
+python-jose[cryptography]==3.5.0
+pydantic==2.11.7
+pydantic-settings==2.8.1
+psutil==7.1.3
+httpx==0.28.1
+PyPDF2==3.0.1
+reportlab==4.3.1
+ruff==0.12.10
+bandit==1.9.3
+pre-commit==4.5.1
